--- a/lesson1/pom.xml
+++ b/lesson1/pom.xml
@@ -12,8 +12,9 @@
     <artifactId>lesson1</artifactId>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <java.version>8</java.version>
     </properties>
 
 </project>
